--- a/advent-of-code.cabal
+++ b/advent-of-code.cabal
@@ -10,7 +10,10 @@ copyright:     Kevin Mullins 2021
 library
   hs-source-dirs:     src
   default-language:   Haskell2010
-  exposed-modules:    Advent.Of.Code
+  exposed-modules:
+    Advent.Of.Code
+    Advent.Of.Code.Input
+
   ghc-options:        -Wall -Werror=incomplete-patterns
   default-extensions:
     BlockArguments
