--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: Upload Binary and Documentation
+    name: Upload Documentation
     runs-on: ubuntu-latest
     steps:
     - name: Checkout Code
