--- a/advent-of-code.cabal
+++ b/advent-of-code.cabal
@@ -1,79 +1,48 @@
-cabal-version: 2.4
+cabal-version: 3.0
 name:          advent-of-code
-version:       0.2.1.0
-synopsis:      Advent of Code framework
-description:   Framework for automatically fetching, testing, benchmarking, and submitting AoC problems
-category:      Web
+version:       0.3.0.0
 license:       ISC
 license-file:  LICENSE
+copyright:     Kevin Mullins 2022
+maintainer:    kevin@pnotequalnp.com
+author:        Kevin Mullins
 homepage:      https://github.com/pnotequalnp/advent-of-code
 bug-reports:   https://github.com/pnotequalnp/advent-of-code/issues
-author:        Kevin Mullins
-maintainer:    kevin@pnotequalnp.com
-copyright:     Kevin Mullins 2021-2022
+synopsis:      Advent of Code Framework
+description:
+    Framework for automatically fetching, testing, benchmarking, and submitting Advent of Code challenges
+
+category:      Web
 
 source-repository head
-  type: git
-  location: https://github.com/pnotequalnp/advent-of-code
-
-common base
-  default-language:   Haskell2010
-  ghc-options:
-    -Wall -Wcompat -Werror=incomplete-patterns
-    -fno-show-valid-hole-fits -Wno-unticked-promoted-constructors
-
-  default-extensions:
-    BlockArguments
-    DeriveGeneric
-    ImportQualifiedPost
-    LambdaCase
-    NamedFieldPuns
-    OverloadedStrings
-    PatternSynonyms
-    TupleSections
-    TypeApplications
-    ViewPatterns
-
-  build-depends:
-    , base                  >=4.14.1.0 && <5.0
-    , containers            ^>=0.6.5
-    , text                  ^>=1.2.4
+    type:     git
+    location: https://github.com/pnotequalnp/advent-of-code
 
 library
-  import:          base
-  hs-source-dirs:  src
-  exposed-modules:
-    Advent.Of.Code
-    Advent.Of.Code.CLI
-    Advent.Of.Code.Input
-    Advent.Of.Code.Test
-    Advent.Of.Code.Test.Parsing
-    Advent.Of.Code.Test.Types
+    exposed-modules:    Advent.Of.Code
+    hs-source-dirs:     src
+    other-modules:
+        Advent.Of.Code.Diagnostics
+        Advent.Of.Code.Options
+        Advent.Of.Code.Solution
+        Advent.Of.Code.Toml
 
-  other-modules:
-    Paths_advent_of_code
+    default-language:   GHC2021
+    default-extensions:
+        BlockArguments DuplicateRecordFields LambdaCase NoFieldSelectors
+        PatternSynonyms ViewPatterns
 
-  autogen-modules:
-    Paths_advent_of_code
-
-  build-depends:
-    , advent-of-code-api    ^>=0.2.8
-    , criterion             ^>=1.5.11
-    , optparse-applicative  ^>=0.16.1
-    , tasty                 ^>=1.4.2
-    , tasty-hunit           ^>=0.10.0
-    , tomland               ^>=1.3.2
-
-test-suite advent-of-code-test
-  import:         base
-  hs-source-dirs: test
-  main-is:        Main.hs
-  type:           exitcode-stdio-1.0
-  other-modules:
-    Test.Advent.Of.Code.Test.Parsing
-
-  build-depends:
-    , advent-of-code
-    , advent-of-code-api    ^>=0.2.8
-    , tasty                 ^>=1.4.2
-    , tasty-hunit           ^>=0.10.0
+    ghc-options:        -Wall -Wcompat -Werror=incomplete-patterns
+    build-depends:
+        advent-of-code-api ^>=0.2.8,
+        base >=4.16 && < 5,
+        bytestring ^>=0.11.3,
+        containers ^>=0.6.5,
+        megaparsec ^>=9.2.1,
+        optparse-applicative ^>=0.16.1,
+        tasty ^>=1.4.2,
+        tasty-bench ^>=0.3.1,
+        tasty-hunit ^>=0.10.0,
+        template-haskell ^>=2.18.0,
+        text >=1.2.5 && < 2.1,
+        time ^>=1.11.1
